--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:root {
-    --dist-x: 65px;
-    --dist-y: 65px;
-  }
 
         
         html, body{
@@ -9,11 +5,7 @@
             height:100%;
         }
         body{
-            background:#e9f5ff;
-        }
-
-        #svgBlur{
-            display: none;
+            background:#242424;
         }
 
         main{
@@ -22,368 +14,6 @@
             justify-content: center;
             align-items: center; 
             height: 100%;
-            
-            animation-name: rotate;
-            animation-duration: 1s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 0s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: none;
 
         }
         
-        .about,
-        .menu
-        {
-            background: aliceblue;  
-            max-width: 290px;
-            margin: 12px;
-
-
-            animation-name: scaleSize;
-            animation-duration: 1s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 0s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: forwards;
-        }
-
-
-        .about--parent,
-        .menu--parent{
-            opacity: 0;
-
-            animation-name: opacity;
-            animation-duration: 0.5s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 0.8s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: forwards;
-        }
-
-        .break {
-            flex-basis: 100%;
-            height: 0;
-          }
-
-
-        /* text delays of menu items */
-        .menu--resume > p{
-            opacity: 0;
-
-            animation-name: opacity;
-            animation-duration: 0.5s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 1.8s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: forwards;
-        }
-
-        .menu--contact > p{
-            opacity: 0;
-
-            animation-name: opacity;
-            animation-duration: 0.5s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 2.8s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: forwards;
-        }
-
-        .menu--recent > p{
-            opacity: 0;
-
-            animation-name: opacity;
-            animation-duration: 0.5s;
-            animation-timing-function: cubic-bezier(0.480, 0.770, 0.000, 0.920);
-            animation-delay: 3.8s;
-            animation-iteration-count: 1;
-            animation-direction: normal;
-            animation-fill-mode: forwards;
-        }
-
-        .menu--parent{
-            filter:url('#goo');
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-evenly;
-        }
-
-        .menu--about{
-            width:80px;
-            height:80px;
-            background:#acc7ed;
-            text-align:center;
-            color:#000000;
-            font-size:18px;
-            border-radius:100%;
-        }
-
-        .menu--resume{
-            opacity: 0;
-            transform-origin: 40px -31px;
-
-            width:  80px;
-            height: 80px;
-            background: #acc7ed;
-            text-align:center;
-            color:#000000;
-            font-size:18px;
-            border-radius:100%;  
-
-            animation-name: opacity, wabbleOutY;
-            animation-duration:  0.1s, 0.5s;
-            animation-timing-function: ease, ease;
-            animation-delay: 1s, 1s;
-            animation-iteration-count: 1, 1;
-            animation-direction: normal, normal;
-            animation-fill-mode:  forwards, forwards;
-            
-        }
-
-        .menu--contact{
-            transform-origin: 40px -17px;
-            opacity: 0;
-
-            width:  80px;
-            height: 80px;
-            background: #acc7ed;
-            text-align:center;
-            color:#000000;
-            font-size:18px;
-            border-radius:100%;  
-
-            animation-name: opacity, wabbleOutYMedium;
-            animation-duration:  0.1s, 0.5s;
-            animation-timing-function: ease, ease;
-            animation-delay: 2s, 2s;
-            animation-iteration-count: 1, 1;
-            animation-direction: normal, normal;
-            animation-fill-mode:  forwards, forwards;
-            
-        }
-
-        .menu--recent{
-            transform-origin: 40px 37px;
-            opacity: 0;
-
-            width:  80px;
-            height: 80px;
-            background: #acc7ed;
-            text-align:center;
-            color:#000000;
-            font-size:18px;
-            border-radius:100%;  
-
-            animation-name: opacity, wabbleOutYBig;
-            animation-duration:  0.1s, 0.5s;
-            animation-timing-function: ease, ease;
-            animation-delay: 3s, 3s;
-            animation-iteration-count: 1, 1;
-            animation-direction: normal, normal;
-            animation-fill-mode:  forwards, forwards;
-            
-        }
-
-
-        @media only screen and (max-width: 600px) {
-            main{
-                flex-direction: column;
-            }
-            .menu--parent{
-                flex-direction: row;
-            }
-            .menu--resume{
-                transform-origin: -77px 47px;
-                animation-name: opacity, wabbleOutX;
-            }
-            .menu--contact{
-                transform-origin: 169px -20px;
-                animation-name: opacity, wabbleOutXMedium;
-            }
-            .menu--recent{
-                transform-origin: -85px 74px;
-                animation-name: opacity, wabbleOutXBig;
-            }
-        }
-
-
-        @keyframes scaleSize {
-            
-            0%{
-             transform: scale(0.15);
-            }
-            80%{
-             transform: scale(0.35);
-            }
-            100%{
-            transform: scale(1);
-            }
-        }
-
-        @keyframes opacity {
-            0%{
-                opacity: 0;
-            }
-            100%{
-                opacity: 1;
-            }
-        } 
-        
-        @keyframes rotate {
-            0%{
-                transform: rotate(660deg) translateX(30px);
-            }
-            100%{
-                transform: rotate(0deg) translateX(0);
-            }
-        } 
-        
-        @keyframes wabble {
-            0%{
-                border-radius: 44% 56% 64% 36% / 39% 43% 57% 61%;
-            }
-            25%{
-                border-radius: 44% 56% 74% 26% / 57% 57% 43% 43%;
-            }
-            50%{
-                border-radius: 44% 56% 34% 66% / 75% 36% 64% 25%;
-            }
-            75%{
-                border-radius: 41% 59% 62% 38% / 50% 56% 44% 50%;
-            }
-            100%{
-                border-radius: 64% 36% 40% 60% / 57% 57% 43% 43%;
-            }
-        } 
-         
-        @keyframes scaleImg {
-            0%{
-                transform: scale(0.21);
-            }
-            50%{
-                transform: scale(1.2);
-            }
-            100%{
-                transform: scale(1);
-            }
-        } 
-        
-        @keyframes scaleSound {
-            0%{
-                transform: scale(0.6);
-            }
-            50%{
-                transform: scale(1.2);
-            }
-            100%{
-                transform: scale(1);
-            }
-        } 
-
-        /* Resume */
-
-        @keyframes wabbleOutX{
-            0%{
-              transform:scale(0) translateX(0px);
-            }
-            100%{
-              transform:scale(1) translateX(0px);
-            }
-        }
-        @keyframes wabbleOutY{
-            0%{
-              transform:scale(0) translateY(0px);
-            }
-            100%{
-              transform:scale(1) translateY(25px);
-            }
-        }
-       
-        @keyframes wabbleOutXMedium{
-            0%{
-              transform:scale(0) translateY(0px);
-            }
-            100%{
-              transform:scale(1) translateY(25px);
-            }
-        }
-        @keyframes wabbleOutYMedium{
-            0%{
-              transform:scale(0) translateY(0px);
-            }
-            100%{
-              transform:scale(1) translateY(55px);
-            }
-        }
-        
-        @keyframes wabbleOutXBig{
-            0%{
-              transform:scale(0) translate(0px, 0px);
-            }
-            100%{
-              transform:scale(1) translate(0px, 25px);
-            }
-        }
-        @keyframes wabbleOutYBig{
-            0%{
-              transform:scale(0) translateY(0px);
-            }
-            100%{
-              transform:scale(1) translateY(75px);
-            }
-        }
-
-          
-        @keyframes blob-right-top-anim{
-
-            0%{
-            transform:scale(1.1) translate(0,0);
-            }
-            33%{
-            transform:scale(0.9) translate(65px,0);
-            }
-            64%{
-            transform:scale(0.7) translate(65px,65px);
-            }
-            96%{
-            transform:scale(1.1) translate(0,0);
-            }
-        }
-        
-        @keyframes blob-left-bottom-anim{
-            0%{
-                transform:scale(1.1) translate(0,0);
-            }
-            33%{
-                transform:scale(0.9) translate(65px,0);
-            }
-            66%{
-                transform:scale(0.7) translate(65px,65px);
-            }
-            98%{
-                transform:scale(1.1) translate(0,0);
-            }
-        }
-          
-        @keyframes blob-right-bottom-anim{
-            0%{
-                transform:scale(1.1) translate(0,0);
-            }
-            33%{
-                transform:scale(0.9) translate(65px,0);
-            }
-            68%{
-                transform:scale(0.7) translate(65px,65px);
-            }
-            100%{
-                transform:scale(1.1) translate(0,0);
-            }
-        }
